tests/paczka1/fuzzy1/90038090.err
Error in line 5: 0AmOzRZB S6-8 -62,5
Error in line 16: N82KnZoH S121 50,3
Error in line 23: qsqkRnSG0 S835 5,2
Error in line 30: TyjG2LrlL A915 90,5
Error in line 32: TyjG2LrlL S648 79,5
